--- a/template/static/package.json
+++ b/template/static/package.json
@@ -26,6 +26,7 @@
     "babel-preset-react": "^6.24.1",
     "jquery": "^3.3.1",
     "react": "^16.4.1",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
     "webpack": "^3.0.0"
   },
