--- a/template/static/package.json
+++ b/template/static/package.json
@@ -24,10 +24,13 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "jquery": "^3.3.1",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
+    "style-loader": "^0.21.0",
     "webpack": "^3.0.0"
   },
   "babel": {
