--- a/template/static/package.json
+++ b/template/static/package.json
@@ -26,6 +26,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.11",
     "jquery": "^3.3.1",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
